# sweat_voter

./: .gitignore  Cargo.toml  build.gradle  local.properties  participants.json  readme.md  settings.gradle  start.bat  start.sh
android_app/: build.gradle
android_app/src/main/: AndroidManifest.xml
android_app/src/main/java/me/delta/sweat_voter/: MainActivity.java
android_app/src/main/rust/: Cargo.toml
android_app/src/main/rust/src/: lib.rs
client/: Cargo.toml  index.html  start.bat
client/assets/: body.css  canvas.css  modals.css  script.js  scroll.js
client/images/: banner.xcf
client/src/: app.rs  class_selector.rs  console.rs  editor_selector.rs  lib.rs  login_selector.rs  main.rs  name_selector.rs  nickname_viewer.rs  password_selector.rs  person_selector.rs  stats_viewer.rs
common/src/: lib.rs  packets.rs
server/: Cargo.toml
server/src/: commands.rs  data_server.rs  main.rs
server/src/data_server/: compat.rs  mutation_tracker.rs  permissions.rs  serialization.rs
