[workspace]
resolver = "2"
members = ["client", "common", "server"]

[workspace.dependencies]
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.114"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2