[package]
name = "client"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "wasm32-unknown-unknown",
    "aarch64-linux-android",
    "x86-64-pc-windows-msvc",
]

[dependencies]
egui = "0.30"
ehttp = { version = "0.5", features = ["json"] }

eframe = { version = "0.30", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }


log.workspace = true
serde.workspace = true
serde_json.workspace = true
common = { path = "../common" }

# native:
[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Location",
] } # to access the DOM (to hide the loading text)
