[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
actix-cors = "0.7.0"
log = { workspace = true }
serde.workspace = true
serde_json.workspace = true
common = { path = "../common" }

tracing-subscriber = { version = "0", features = ["env-filter"] }
tracing = { version = "0", features = [
  "max_level_trace",
  "release_max_level_warn",
] }