[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
actix-cors = "0.7.0"
serde.workspace = true
serde_json.workspace = true
common = { path = "../common" }

tracing-subscriber = { version = "0", features = ["env-filter"] }
tracing = { version = "0", features = [
  "max_level_trace",
  "release_max_level_warn",
] }
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
structopt = "0.3.26"
tokio = "1.48.0"
anyhow = "1.0.100"
shlex = "1.3.0"
derive_more = "2.0.1"
