[package]
name = "android_main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.22"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
android-activity = "0.6.0"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "android-game-activity",
] }
client = { path = "../../../../client" }